# fx-data-fetcher

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: fetcher.py
migrations/: setup_table.sql
